--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p style="text-align:center"><font size="4"> <b>Hello! Thank you for participating in our research. Click to continue to instructions!</font></p></b>
 
 
- <form action="login.py" method="submit">
+ <form action="login.py" method="post">
 <center>
 <input type="hidden" name="qindex" value="0">
 <input type="submit" value="Continue" /></center>
